fix: MoneyInput label alignments (#1293)

--- a/packages/components/src/moneyInput/MoneyInput.less
+++ b/packages/components/src/moneyInput/MoneyInput.less
@@ -37,23 +37,11 @@
 
   span:not(.tw-icon) {
     min-width: 2.6em; // fits a 3 letter string, ZMW being the longest one
-
-    @media (--screen-sm) {
-      min-width: var(--size-32);
-    }
   }
 }
 
 .tw-money-input .amount-currency-select-btn > .tw-select > .btn-addon.dropdown-toggle {
   .padding(right, var(--size-16), var(--size-16));
-}
-
-.tw-money-input .amount-currency-select-btn > .tw-select > .btn-lg > span {
-  line-height: 25px;
-}
-
-.tw-money-input .amount-currency-select-btn > .tw-select > .btn-md > span {
-  line-height: 22px;
 }
 
 .tw-money-input .amount-currency-select-btn > .tw-select > .btn > span.tw-icon {
